[HW4][add] add validate

--- a/Hw4-store/src/i18n/zh_tw.json
+++ b/Hw4-store/src/i18n/zh_tw.json
@@ -38,18 +38,26 @@
       "imgLink": "輸入圖片網址",
       "imgLinkHint": "請輸入圖片連結",
       "imgUplaod": "或 上傳圖片",
+      "imgErrorLen": "檔案名稱長度需小於32",
+      "imgErrorSize": "檔案必須小於 1M",
+      "imgErrorType": "檔案格式不正確",
       "title": "品名",
       "titleHint": "請輸入商品名稱",
+      "titleError": "品名不得為空",
       "category": "分類",
       "categoryHint": "請設定商品分類",
+      "categoryError": "分類不得為空",
       "num": "庫存",
       "numHint": "請輸入商品庫存",
+      "numError": "庫存必須為大於等於0的整數",
       "unit": "單位",
       "unitHint": "請輸入商品的計數單位",
       "originPrice": "定價",
       "originPriceHint": "請輸入商品的定價",
+      "originPriceError": "定價不得為空或少於0",
       "price": "售價",
       "priceHint": "請輸入商品的售價",
+      "priceError": "售價不得為空或少於0",
       "description": "描述",
       "descriptionHint": "請簡短描述此商品",
       "content": "說明",
