[HW4][add] add products UI

--- a/Hw4-store/src/i18n/zh_tw.json
+++ b/Hw4-store/src/i18n/zh_tw.json
@@ -37,6 +37,12 @@
       "handmade": "手作課程"
     }
   },
+  "foreProducts": {
+    "card": {
+      "originalPrice": "定價",
+      "discountPrice": "優惠價"
+    }
+  },
   "products": {
     "buttons": {
       "putOnSale": "上架",
